# Thesis-ROS

./: README.md
panda_moveit_config/: CMakeLists.txt  feedback_pub.py  forkin.py  move_to_goal.py  package.xml  unity_coordinate_listener.py  upd_joint_pos_control.cpp
panda_moveit_config/config/: fake_controllers.yaml  gazebo_panda.urdf  panda.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
panda_moveit_config/launch/: gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch
panda_moveit_config/src/: pos_udp_sender.cpp  upd_joint_pos_control.cpp
